# deepfungi

./: .gitignore  Cargo.toml  README.md
digitclass/: Cargo.toml
digitclass/src/: main.rs  mnist.rs  state.rs  train.rs
src/: functions.rs  input.rs  layer.rs  lib.rs  network.rs  neuron.rs  test.rs
src/network/: test.rs
