[package]
name = "digitclass"
version = "0.1.0"
authors = ["brunoczim <brunoczim@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deepfungi = { path = "../" }
serde = "^1.0"
bincode = "^1.2"
rand = "^0.7"
clap = "^2.33"
